--- a/src/mainpage.dox
+++ b/src/mainpage.dox
@@ -1,141 +1,11 @@
 /**
 @mainpage libcasimir
 
-\section casimireffect The Casimir Effect
-
-In 1948 Hendrik Casimir considered two parallel, perfectly conducting plates in
-vacuum at temperature T=0 and predicted an attracting force. This force arises
-due to vacuum fluctuations and was experimentally verified in 1956 by
-Derjaguin, Abrikosova and Lifshitz, as well as in 1958 by Sparnaay.
-
-Since the Casimir effect is a manifestation of vacuum fluctuations in the
-mesoscopic world, it has relations to many open physical questions. As the
-Casimir force is the dominant force between electically neutral bodies at
-micron or sub-micron distances, the Casimir effect plays an important role in
-the search for new hypothetical forces predicted by unified theories. The
-Casimir effect is also linked to the theory of gravitation and the puzzle of the
-cosmological constant. All energy gravitates and thus zero point fluctuations
-are expected to contribute to the stress-energy tensor in Einstein's field
-equations. In fact, several cosmological observations like the discovery that
-the universe expands with an increasing rate suggest a non-zero energy density of
-vacuum. However, estimations of the cosmological constant and measurements
-disagree by about 120 orders of magnitude.
-
-
-\section whatislibcasimir What is libcasimir?
-
 libcasimir implements the numerics for the Casimir effect in the plane-sphere
 geometry for arbitrary materials at zero and finite temperature using the
-scattering approach. A sphere of radius R is separated by a distance of L from
-a plane. The plane is infinite in the xy-direction.
+scattering approach.
 
-\subsection features Features
-
-
- - Calculate the free energy \f$\mathcal{F}(T,L,R)\f$ for different separations and temperatures
- - Calculate the free energy \f$\mathcal{F}(T\to\infty,L,R)\f$ in the high temperature limit
- - Full support for perfect conductors, Drude metals, and generic metals described by a user-defined dielectric function
- - libcasimir is fast and reliable
- - ready to use programs: you don't have to modify the code
- - libcasimir is free software - you may use it or even modify it
-
-
-\subsection installation Installation
-
-If you use Linux or Unix, you need the gcc and development libraries and header
-files for the standard C library. In addition, the hodlr_wrapper repository should
-be cloned from https://github.com/michael-hartmann/hodlr_wrapper in parallel to the
-present repository.
-
-On a Debian-like Linux the commands
-
-    $ sudo apt-get install gcc libc6-dev make liblapack-dev libopenmpi-dev openmpi-bin
-    $ cd src/
-    $ make
-
-should install all dependencies and compile the code.
-
-\subsection usage Usage
-
-To compute the Casimir free energy between a sphere of radius R=150µm and a
-plane separated by a distance L=2µm at room temperature T=300K, use the
-command:
-
-    mpirun -c 7 ./casimir -L 2e-6 -R 150e-6 -T 300
-    # L      = 2e-06
-    # R      = 0.00015
-    # LbyR   = 0.0133333333333333
-    # T      = 300
-    # cutoff = 1e-09
-    # epsrel = 1e-06
-    # ldim   = 525
-    # cores  = 7
-    # alpha  = 0.0263157894736842
-    # k=1, xi=0, logdetD=-20.5414371366319, t=0.893615
-    # k=2, xi=125.121224504, logdetD=-0.697593023726068, t=47.042
-    # k=3, xi=250.242449008, logdetD=-0.0258391836330834, t=47.5505
-    # k=4, xi=375.363673512, logdetD=-0.000959951381331692, t=44.3509
-    # k=5, xi=500.484898016, logdetD=-3.56248208858549e-05, t=39.9074
-    # k=6, xi=625.60612252, logdetD=-1.31970422831906e-06, t=29.2294
-    #
-    # L/R, L, R, T, ldim, F*(L+R)/(hbar*c)
-    0.01333333333333333, 2e-06, 0.00015, 300, 525, -1049.959261174529
-
-
-\section bugs Bugs, developing and contributing
-
-The latest version if libcasimir is available at github. If you find a bug,
-please create an issue. If you have improvements, create a pull request.
-
-
-\section authors Authors, license and credits
-
- - Michael Hartmann, michael.hartmann@physik.uni-augsburg.de
-   main developer
-
- - Gert-Ludwig Ingold, gert.ingold@physik.uni-augsburg.de
-   contributions to documentation, speedup of PFA calculation, bugfixes
-
-For a full list, see CREDITS.
-
-The code is licensed under GPLv2, see LICENSE.
-
-Also, libcasimir uses some third-party software:
-
-
- - <a href="https://github.com/sivaramambikasaran/HODLR">HODLR</a> A fast
-   direct solver and determinant computation for dense linear systems.(MPL2)
- - <a href="http://eigen.tuxfamily.org/index.php?title=Main_Page">Eigen</a>
-   HODLR depends on libeigen. However, only header files are needed. (MPL2)
- - <a href="https://github.com/ESSS/cquadpack">cquadpack</a> for integration.
-   cquadpack is a a C port of the QUADPACK software originally written in
-   Fortran for solving integrals. (public domain)
- - <a href="https://www.netlib.org/cephes/">cephes</a> is a software collection
-   with special functions. libcasimir uses the code of the Chebychev expansion
-   to compute the modified Bessel functions I0(x) and I1(x). Boths files have
-   been slightly modified, see bessel.c. (No license, probably BSD licensed.)
- - <a href="http://www.netlib.org/lapack/">LAPACK</a> Linear algebra library.
-   LAPACK may be used to calculate the determinant of the scattering matrices.
-   However, for small separations using HODLR is much faster. (Modified BSD)
- - <a href="https://github.com/cofyc/argparse">argparse<a> A command line
-   arguments parsing library in C. (MIT)
-
-
-\section publications Publications related to libcasimir
-
- - Advancing numerics for the Casimir effect to experimentally relevant aspect ratios, <br>
-   Michael Hartmann, Gert-Ludwig Ingold, Paulo A. Maia Neto, <br>
-   Phys. Scr. 93, 114003 (2018), DOI: <a href="https://doi.org/10.1088/1402-4896/aae34e">10.1088/1402-4896/aae34e</a>
-
- - Plasma vs Drude modelling of the Casimir force: beyond the proximity force approximation, <br>
-   Michael Hartmann, Gert-Ludwig Ingold, and Paulo A. Maia Neto, <br>
-   Phys. Rev. Lett. 119, 043901 (2017), DOI: <a href="https://doi.org/10.1103/PhysRevLett.119.04390">10.1103/PhysRevLett.119.04390</a>
-
- - Disentangling geometric and dissipative origins of negative Casimir entropies, <br>
-   Stefan Umrath, Michael Hartmann, Gert-Ludwig Ingold, and Paulo A. Maia Neto, <br>
-   Phys. Rev. E 92, 042125 (2015), DOI: <a href="https://doi.org/10.1103/PhysRevE.92.042125">10.1103/PhysRevE.92.042125</a>
-
- - Geometric origin of negative Casimir entropies: A scattering-channel analysis, <br>
-   Gert-Ludwig Ingold, Stefan Umrath, Michael Hartmann, Romain Guerout, Astrid Lambrecht, Serge Reynaud, and Kimball A. Milton, <br>
-   Phys. Rev. E 91, 033203 (2015), DOI: <a href="https://doi.org/10.1103/PhysRevE.91.033203">10.1103/PhysRevE.91.033203</a>
+This document describes the API of the libcasimir library. The compilation of
+the software and the usage of the programs are described in the user manual
+(manual.pdf).
 */
